# oauth-cli-coder

./: .gitignore  README.md  pyproject.toml
examples/: README.md  creative_chain.py  creative_chain.sh
src/oauth_cli_coder/: __init__.py  base.py  cli.py  skill_template.py  stealth.py
src/oauth_cli_coder/providers/: __init__.py  claude.py  codex.py  gemini.py
tests/: test_e2e_cli.py  test_providers.py  test_session_registry.py  test_skill_install.py  test_stealth.py
