[project]
name = "oauth-cli-coder"
version = "0.3.0"
description = "Seamlessly interact with AI CLI coders (Claude, Gemini, Codex) via tmux TUI sessions."
readme = "README.md"
authors = [
    { name = "Dallas Pool", email = "codeninja@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[project.scripts]
oauth-coder = "oauth_cli_coder.cli:cli"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
